# learn-harness-by-example

./: .gitignore  CHAPTER_TEMPLATE.md  CONTRIBUTING.md  LICENSE.md  README.md  ROADMAP.md  index.html  pyproject.toml
.github/workflows/: pages.yml
cases/: failure_corpus.json
docs/: index.html
docs/assets/: site.css  site.js
docs/chapters/: 00-case-study.md  01-why-harness.md  02-minimal-loop.md  03-model-provider.md  04-tools.md  05-run-state.md  06-trace-observability.md  07-eval.md  08-failure-driven.md  09-replay-compare.md  10-final-project.md
examples/: README.md  ch00_case_study.py  ch01_why_harness.py  ch02_minimal_loop.py  ch03_model_provider.py  ch04_tools.py  ch05_run_state.py  ch06_trace_observability.py  ch07_eval.py  ch08_failure_driven.py  ch09_replay_compare.py  ch10_research_harness.py  minimax_smoke.py
harness/: __init__.py  __main__.py  core.py  eval.py  failures.py  models.py  providers.py  replay.py  state.py  tools.py
outputs/: prompt-failure-to-eval.md  prompt-trace-debugger.md  skill-agent-harness-reviewer.md
tests/: test_harness.py
traces/: case-study-report.json  eval-results.json  failure-corpus-report.json  sample-run.jsonl
traces/final/: latest-run.json
traces/harness/: eval-false-positive.json  latest-run.json
traces/minimax/: latest-run.json
traces/replay/: baseline.json  improved.json
